<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sangnguyen.colorpicker.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_width="310dp"
        android:layout_height="176dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/red"
        android:layout_width="41dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="336dp"
        android:text="@string/color_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/green"
        android:layout_width="41dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/color_green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/red" />

    <TextView
        android:id="@+id/blue"
        android:layout_width="41dp"
        android:layout_height="20dp"
        android:layout_marginBottom="92dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/color_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/green"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/redText"
        android:layout_width="27dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/value_red"
        app:layout_constraintBottom_toTopOf="@+id/greenText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956" />

    <TextView
        android:id="@+id/greenText"
        android:layout_width="27dp"
        android:layout_height="20dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/value_green"
        app:layout_constraintBottom_toTopOf="@+id/blueText"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/blueText"
        android:layout_width="27dp"
        android:layout_height="20dp"
        android:layout_marginBottom="112dp"
        android:layout_marginEnd="16dp"
        android:text="@string/value_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <SeekBar
        android:id="@+id/redBar"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:max="255"
        app:layout_constraintEnd_toStartOf="@+id/redText"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/red"
        app:layout_constraintTop_toBottomOf="@+id/surfaceView" />

    <SeekBar
        android:id="@+id/greenBar"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:max="255"
        app:layout_constraintEnd_toStartOf="@+id/greenText"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/green"
        app:layout_constraintTop_toBottomOf="@+id/redBar" />

    <SeekBar
        android:id="@+id/blueBar"
        android:layout_width="220dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:max="255"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/blueText"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/blue"
        app:layout_constraintTop_toBottomOf="@+id/greenBar"
        app:layout_constraintVertical_bias="0.214" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/surfaceView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>



</android.support.constraint.ConstraintLayout>
